# haskell-plotter

./: README.md  haskell-plotter.cabal  test.sh
programs/: Main.hs
src/: Ivy.hs
