name:                haskell-plotter
version:             0.1
synopsis:            Haskell plotter based on Brick
license:             BSD3
license-file:        LICENSE
author:              Michal Pohradsky <mpodhradsky@galois.com>
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable haskell-plotter
  hs-source-dirs:      programs, src
  main-is:             Main.hs
  ghc-options:         -threaded -Wall
  other-modules:       Model
  default-language:    Haskell2010
  extra-libraries:     ivy
  build-depends:       base,
                       brick,
                       lens,
                       linear,
                       vty,
                       random,
                       stm,
                       optparse-applicative
